simple as fuck integration with gmap with 1 possible sec flaw - me handle

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,7 @@
  *= require fonts
  *= require layers
  *= require navigation
+ *= require gmap
  *= require settings
  *= require_tree .
  *= require_self
