--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,11 @@
     / Google Fonts
     %link{:href => "https://fonts.googleapis.com/css?family=Exo+2|Open+Sans:300,400,700", :rel => "stylesheet"}/
     %link{:href => "https://fonts.googleapis.com/css?family=Exo+2|Volkhov:400,400i", :rel => "stylesheet"}/
-    %script{:src => "http://maps.google.com/maps/api/js?sensor=false", :type => "text/javascript"}
+    / Load the API from the specified URL
+    / The async attribute allows the browser to render the page while the API loads
+    / The key parameter will contain your own API key (which is not needed for this tutorial)
+    / The callback parameter executes the initMap() function
+    %script{:async => "", :defer => "defer", :src => "https://maps.googleapis.com/maps/api/js?key=#{ENV["GOOGLE_MAPS_KEY"]}&callback=initMap", :type => "text/javascript"}
     / Respond.js and HTML shiv provide HTML5 support in older browsers like IE9 and 8
     /[if lt IE 9]
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -32,11 +36,11 @@
     = render 'layouts/footer'
 
 / Permission for Setting Cookies
-.alert.alert-dismissible.alert-cookies
-  .container
-    .row
-      .col-sm-12
-        Szanowna Użytkowniczko! Szanowny Użytkowniku!
-        Aby dalej móc dostarczać coraz lepsze materiały redakcyjne i udostępniać coraz lepsze usługi, potrzebujemy zgody na dopasowanie treści marketingowych do Twojego zachowania. Dzięki nim możemy finansować rozwój naszych usług. Dbamy o Twoją prywatność. Nie zwiększamy zakresu naszych uprawnień. Twoje dane są u nas bezpieczne, a zgodę możesz wycofać w każdej chwili na podstronie polityka prywatności.
-        \  
-        %button.btn.btn-primary.btn-sm{"data-dismiss" => "alert", :type => "button"} Akceptuję
+/ .alert.alert-dismissible.alert-cookies
+/   .container
+/     .row
+/       .col-sm-12
+/         Szanowna Użytkowniczko! Szanowny Użytkowniku!
+/         Aby dalej móc dostarczać coraz lepsze materiały redakcyjne i udostępniać coraz lepsze usługi, potrzebujemy zgody na dopasowanie treści marketingowych do Twojego zachowania. Dzięki nim możemy finansować rozwój naszych usług. Dbamy o Twoją prywatność. Nie zwiększamy zakresu naszych uprawnień. Twoje dane są u nas bezpieczne, a zgodę możesz wycofać w każdej chwili na podstronie polityka prywatności.
+/         \  
+/         %button.btn.btn-primary.btn-sm{"data-dismiss" => "alert", :type => "button"} Akceptuję
