possible fix heroku js error

--- a/app/views/static_pages_controller/contact.html.haml
+++ b/app/views/static_pages_controller/contact.html.haml
@@ -62,6 +62,11 @@
     .row
       .col-sm-12.no-gutter
         / The div element for the map
-        #map
+        .gmap#map
   #back
     %i.fa.fa-angle-up
+/ Load the API from the specified URL
+/ The async attribute allows the browser to render the page while the API loads
+/ The key parameter will contain your own API key (which is not needed for this tutorial)
+/ The callback parameter executes the initMap() function
+%script{:async => "", :defer => "defer", :src => "https://maps.googleapis.com/maps/api/js?key=#{ENV["GOOGLE_MAPS_KEY"]}&callback=initMap", :type => "text/javascript"}
