--- a/app/assets/stylesheets/gmap.css.scss
+++ b/app/assets/stylesheets/gmap.css.scss
@@ -1,5 +1,19 @@
 /* Set the size of the div element that contains the map */
 #map {
-  height: 600px;  /* The height is 600 pixels */
+  height: 500px;  /* The height is 500 pixels */
   width: 100%;  /* The width is the width of the web page */
- }
+  /* Google Map Address */
+
+  .gmap-address{
+      overflow: hidden;
+      position: relative;
+  }
+
+  .gmap-address .address{
+      background-color: rgba(48,59,65,0.95);
+      color: #fff;
+      position: absolute;
+      z-index: 10;
+      padding:20px;
+  }
+}
