add logotypes above footer part 1

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,3 +24,12 @@
  *= require_tree .
  *= require_self
  */
+
+.partners {
+  background-color: #fff !important;
+  display: inline-block;
+}
+.partners ul {
+  list-style-position: none;
+  display: inline-block;
+}
