--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@
   background-color: #fff !important;
   display: inline-block;
 }
-.partners ul {
+.partners li {
   list-style-position: none;
-  display: inline-block;
+  display: inline !important;
 }
