--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,7 +16,7 @@
           %ul.contact
             %li
               %span=I18n.t('header.email_us')
-              =I18n.t('header.e-mail')
+              =I18n.t('e-mail')
   %nav.navbar.navbar-default
     / Navigation Bar
     .container
@@ -49,6 +49,6 @@
             %span.emergency
               / Emergency Number
               %i.fa.fa-mobile
-              %span.number=I18n.t('header.phone_nr')
+              %span.number=I18n.t('phone_nr')
               %br/
-              %span.sub-text=I18n.t('header.office')
+              %span.sub-text=I18n.t('office_nr')
