--- a/app/views/static_pages_controller/about.html.haml
+++ b/app/views/static_pages_controller/about.html.haml
@@ -14,7 +14,7 @@
         %br
         =I18n.t('about.issue_1')
         %br
-        =I18n.t('issue_2')
+        =I18n.t('about.issue_2')
         %br
         %br
         %b=I18n.t('about.issue_3')
@@ -30,3 +30,5 @@
     .col-sm-5.mt-20
       =image_tag("cannaHub.jpg", alt: "O to walczymy!", class: "img-responsive")
 %br
+  #back
+    %i.fa.fa-angle-up
