--- a/app/views/static_pages_controller/contact.html.haml
+++ b/app/views/static_pages_controller/contact.html.haml
@@ -5,13 +5,13 @@
       .col-sm-12
         .mt-20
       .col-sm-4.mt-20
-        %h3.heading Odwiedź nas !
-        %p.justify Nasze biuro pracuje od poniedziałku do piątku w godzinach od 10 do 16.
+        %h3.heading=I18n.t('contact.visit_us')
+        %p.justify=I18n.t('contact.working_time')
         %br/
         %address
           %strong Canna Hub Sp. z o.o.
           %br
-          %span Numer KRS: 
+          %span=I18n.t('contact.krs')
           %b 0000734077
           %br
           %span REGON: 
@@ -20,44 +20,44 @@
           %span NIP: 
           %b 5252751926
           %br/
-          ul. Erazma Ciołka 17, 
+          =I18n.t('contact.adress1')
           %br/
-          01-445 Warszawa, Polska
+          =I18n.t('contact.adress2')
           %br/
         %ul.contact-list.contact-list-2x
           %li
             %i.fa.fa-phone 
-            +48 22 100 22 31
+            =I18n.t('office_nr')
           %li 
             %i.fa.fa-phone 
-            +48 501 100 901
+            =I18n.t('phone_nr')
           %li
             %i.fa.fa-envelope
-            biuro@cannahub.eu
+            =I18n.t('e-mail')
         %br/
       .col-sm-8.mt-20
         %h3.heading
-          Contact Us.
-          %span.color1 We love hearing from you.
+          =I18n.t('contact.contact_us')
+          %span.color1=I18n.t('contact.hearing')
         %form#main-contact-form
           .row
             .col-sm-4
               .form-group
-                %input#fname.form-control{:name => "fname", :placeholder => "Your First Name", :type => "text"}/
+                %input#fname.form-control{:name => "fname", :placeholder => "#{I18n.t('contact.first_name')}", :type => "text"}/
             .col-sm-6
               .form-group
-                %input#lname.form-control{:name => "lname", :placeholder => "Your Last Name", :type => "text"}/
+                %input#lname.form-control{:name => "lname", :placeholder => "#{I18n.t('contact.last_name')}", :type => "text"}/
           .form-group
-            %input#email.form-control{:name => "email", :placeholder => "Your Email Id", :type => "text"}/
+            %input#email.form-control{:name => "email", :placeholder => "#{I18n.t('contact.email')}", :type => "text"}/
           .form-group
-            %input#subject.form-control{:name => "subject", :placeholder => "Your Subject Line", :type => "text"}/
+            %input#subject.form-control{:name => "subject", :placeholder => "#{I18n.t('contact.subject')}", :type => "text"}/
           .form-group
-            %textarea#message.form-control{:name => "message", :placeholder => "Please enter your message", :rows => "5"}
+            %textarea#message.form-control{:name => "message", :placeholder => "#{I18n.t('contact.message')}", :rows => "5"}
           %p#status
           .form-group
             %button.btn.btn-primary{:name => "submit", :type => "submit"}
               %i.fa.fa-paper-plane
-              Submit Query
+              =I18n.t('contact.submit')
   .container-fluid.mt-80
     .row
       .col-sm-12.no-gutter
