--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,8 +8,8 @@
           %ul.social
             %li
               = link_to 'en', url_for(locale: :en)
-            %li
-              = link_to 'de', url_for(:locale => 'de')
+            / %li
+            /   = link_to 'de', url_for(:locale => 'de')
             %li
               = link_to 'pl', url_for(locale: 'pl')
         .col-md-6
