tomek told me to change forum offer

--- a/app/views/static_pages_controller/forum.html.haml
+++ b/app/views/static_pages_controller/forum.html.haml
@@ -19,12 +19,13 @@
         =I18n.t('forum.contact')
         =mail_to I18n.t('e-mail'), 'biuro@cannahub.eu'
         %br
-        %br=I18n.t('forum.details')
-        %br
-        %b=I18n.t('forum.horizon')
-        %br
-        %br=I18n.t('forum.offer')
-        %br=I18n.t('forum.faq')
+        =I18n.t('forum.contact2')
+        / %br=I18n.t('forum.details')
+        / %br
+        / %b=I18n.t('forum.horizon')
+        / %br
+        / %br=I18n.t('forum.offer')
+        / %br=I18n.t('forum.faq')
     .col-sm-5.mt-20
       =image_tag("flowers.png", alt: "O to walczymy!", class: "img-responsive")
 %br
