--- a/app/views/static_pages_controller/forum.html.haml
+++ b/app/views/static_pages_controller/forum.html.haml
@@ -13,21 +13,23 @@
         %h3=I18n.t('forum.h3')
         %br
         =I18n.t('forum.when')
-        %br
         =I18n.t('forum.invites')
         %br
         =I18n.t('forum.contact')
-        =mail_to I18n.t('e-mail'), 'biuro@cannahub.eu'
         %br
         =I18n.t('forum.contact2')
-        / %br=I18n.t('forum.details')
-        / %br
-        / %b=I18n.t('forum.horizon')
-        / %br
-        / %br=I18n.t('forum.offer')
-        / %br=I18n.t('forum.faq')
+        %br
+        %h4=I18n.t('forum.details')
+        =I18n.t('forum.details2')
+        %br
+        %br
+        %b=I18n.t('forum.horizon')
+        %br
+        %br=I18n.t('forum.offer')
+        %br=I18n.t('forum.faq')
+        =mail_to "centrala@cannahub.eu", "centrala@cannahub.eu"
     .col-sm-5.mt-20
-      =image_tag("flowers.png", alt: "O to walczymy!", class: "img-responsive")
+      =image_tag("forum/grow.png", alt: "O to walczymy!", class: "img-responsive")
 %br
   #back
     %i.fa.fa-angle-up.container
