hide forum page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -33,8 +33,8 @@
             =link_to I18n.t('header.home'), controller: "static_pages_controller", action: "home"
           %li
             =link_to I18n.t('header.about'), controller: "static_pages_controller", action: "about"
-          %li
-            =link_to I18n.t('header.forum'), controller: "static_pages_controller", action: "forum"
+          / %li
+          /   =link_to I18n.t('header.forum'), controller: "static_pages_controller", action: "forum"
             / %ul.sub-menu
             /   / Sub Menu
             /   %li
