--- a/app/views/layouts/_about.html.haml
+++ b/app/views/layouts/_about.html.haml
@@ -1,18 +1,23 @@
-=provide(:title, I18n.t('home.title'))
+=provide(:title, I18n.t('about.title'))
 .container.mt-80
   .row
     .col-sm-12
       .heading-block
         %h2.heading
-          =I18n.t('home.our')
-          %span.color1=I18n.t('home.offer')
-        %p.sub-heading=I18n.t('home.sub_head1')
-    
+          =I18n.t('about.considerations')
+          %span.color1= I18n.t('about.considerations_leg')
+        %p.sub-heading= I18n.t('about.considerations_cont')
+  .row
     .col-sm-7
       %p.justify 
+        =I18n.t('about.issue_control')
         %br
         =I18n.t('about.issue_1')
         %br
+        =I18n.t('about.issue_2')
+        %br
+        %br
+        %b=I18n.t('about.issue_3')
       .row.mt-40
         .col-sm-6
           %h4= I18n.t('about.central_point')
@@ -23,18 +28,7 @@
             =link_to I18n.t('about.act'), "http://dziennikustaw.gov.pl/du/2017/1458/1", target: "_blank"  
             = I18n.t('about.legal_main')
     .col-sm-5.mt-20
-      =image_tag("cannaHub.jpg", alt: "O to walczymy!", class: "img-responsive")      
-  
+      =image_tag("cannaHub.jpg", alt: "O to walczymy!", class: "img-responsive")
+%br
   #back
     %i.fa.fa-angle-up
-
-
-
-
-
-
-
-
-
-
-
