--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,11 +7,11 @@
         .col-sm-6
           %ul.social
             %li
-              = link_to 'en', url_for(locale: :en)
+              = link_to 'EN', url_for(locale: :en)
             / %li
             /   = link_to 'de', url_for(:locale => 'de')
             %li
-              = link_to 'pl', url_for(locale: 'pl')
+              = link_to 'PL', url_for(locale: 'pl')
         .col-md-6
           %ul.contact
             %li
@@ -33,8 +33,6 @@
             =link_to I18n.t('header.home'), controller: "static_pages_controller", action: "home"
           %li
             =link_to I18n.t('header.about'), controller: "static_pages_controller", action: "about"
-          %li
-            =link_to I18n.t('header.forum'), controller: "static_pages_controller", action: "forum"
             / %ul.sub-menu
             /   / Sub Menu
             /   %li
@@ -45,10 +43,4 @@
             /     =link_to I18n.t('header.grl'), "https://www.grassrootslobbing.pl", target: "_blank"
           %li
             = link_to I18n.t('header.contact'), controller: "static_pages_controller", action: "contact"
-          %li
-            %span.emergency
-              / Emergency Number
-              %i.fa.fa-mobile
-              %span.number=I18n.t('phone_nr')
-              %br/
-              %span.sub-text=I18n.t('office_nr')
+ 
