--- a/app/views/layouts/_new_about.html.haml
+++ b/app/views/layouts/_new_about.html.haml
@@ -2,39 +2,24 @@
   .row
     .col-sm-8
       %h2.heading
-        Krótki 
-        %span.color1 artykuł o 
+        Krótki
+        %span.color1 artykuł o
         nas
       %p
-        CannaHub to platforma integrującą możliwości administracyjne, produkcyjne i logistyczne w celu dostarczania preparatów medycznych na bazie konopi.Nasze rozwiązania to realna poprawa jakości życia chorych i niepełnosprawnych Pacjentów w Polsce i na terenie krajów Unii Europejskiej, gdzie terapia medyczną marihuaną jest prawem pacjenta.  
+        CannaHub to platforma integrującą możliwości administracyjne, produkcyjne i logistyczne w celu dostarczania preparatów medycznych na bazie konopi.Nasze rozwiązania to realna poprawa jakości życia chorych i niepełnosprawnych Pacjentów w Polsce i na terenie krajów Unii Europejskiej, gdzie terapia medyczną marihuaną jest prawem pacjenta.
       %p
-        Zgodnie z prawem, do obrotu oraz importu do Polski dopuszczone są leki gotowe pochodzenia roślinnego, jak również standaryzowane surowce w postaci roślinnej (suszone kwiatostany) oraz w postaci wyciągów przeznaczone do sporządzania leków recepturowych w aptece na podstawie preskrypcji lekarskiej bądź przeznaczone do dalszego procesu produkcyjnego jako substancje czynne.         
+        Zgodnie z prawem, do obrotu oraz importu do Polski dopuszczone są leki gotowe pochodzenia roślinnego, jak również standaryzowane surowce w postaci roślinnej (suszone kwiatostany) oraz w postaci wyciągów przeznaczone do sporządzania leków recepturowych w aptece na podstawie preskrypcji lekarskiej bądź przeznaczone do dalszego procesu produkcyjnego jako substancje czynne.
     .col-sm-4
       .news-slider.style-1
-        .slider-items.owl-carousel.owl-theme.owl-center.owl-loaded
-          .owl-stage-outer
-            .owl-stage
-              .item
-                %div
-                  %h4.heading Ranked 8th in Best Hospitals.
-                  %hr.hr-2.left/
-                  %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
-              .item
-                %div
-                  %h4.heading 80% Surgery Success Rate
-                  %hr.hr-2.left/
-                  %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
-          .owl-controls
-            .owl-nav
-              .owl-prev{:style => "display: none;"} prev
-              .owl-next{:style => "display: none;"} next
-            .owl-dots{:style => ""}
-              .owl-dot
-                %span
-              .owl-dot.active
-                %span
-              .owl-dot
-                %span
+        .slider-items
+          %div
+            %h4.heading Ranked 8th in Best Hospitals.
+            %hr.hr-2.left/
+            %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
+          %div
+            %h4.heading 80% Surgery Success Rate
+            %hr.hr-2.left/
+            %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
         .slider-nav
           .left
             %i.fa.fa-angle-left
