--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,3 +111,25 @@ text-shadow: rgba(0, 0, 0, 0.19) 0px 5px 0px;
 display: block;
 margin: 20px 0px 0px 34px;
 }
+
+.big-icon {
+  height: 300px;
+  width: 300px;
+  font-size: 300px;
+  align-self: center;
+  color: #8ed225;
+}
+
+.content-center {
+  display: flex;
+  justify-content: center;
+}
+
+h2 {
+  text-transform: uppercase;
+}
+
+.margin-model-component {
+  padding-top: 110px;
+  margin-bottom: 60px;
+}
