--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,7 @@
     %link{:href => "https://fonts.googleapis.com/css?family=Exo+2|Volkhov:400,400i", :rel => "stylesheet"}/
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css", :rel => "stylesheet"}/
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css", :rel => "stylesheet"}/
+    %link{:href => "https://fonts.googleapis.com/css?family=Montserrat", :rel => "stylesheet"}
 
     / Respond.js and HTML shiv provide HTML5 support in older browsers like IE9 and 8
     /[if lt IE 9]
@@ -32,6 +33,7 @@
     -#= render 'layouts/loader'
     = render 'layouts/header'
     = render 'layouts/slider'
+    -# = render 'layouts/top_logo'
     = yield
     = render 'layouts/new_about'
     = render 'layouts/terapy'
@@ -46,5 +48,5 @@
 /       .col-sm-12
 /         Szanowna Użytkowniczko! Szanowny Użytkowniku!
 /         Aby dalej móc dostarczać coraz lepsze materiały redakcyjne i udostępniać coraz lepsze usługi, potrzebujemy zgody na dopasowanie treści marketingowych do Twojego zachowania. Dzięki nim możemy finansować rozwój naszych usług. Dbamy o Twoją prywatność. Nie zwiększamy zakresu naszych uprawnień. Twoje dane są u nas bezpieczne, a zgodę możesz wycofać w każdej chwili na podstronie polityka prywatności.
-/         \  
+/         \
 /         %button.btn.btn-primary.btn-sm{"data-dismiss" => "alert", :type => "button"} Akceptuję
