--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -36,4 +36,12 @@
                   %br
                   %i.fa
                   00-240 Warszawa, Polska
+  .footer-sec
+    .container
+      .row
+        .col-sm-12
+          %span.text-comapny 
+            =I18n.t('footer.copywright')
+            =link_to "Canna Hub Sp. z o.o. ", controller: "static_pages_controller", action: "home"
+            =I18n.t('footer.reserved')
  
