--- a/app/views/layouts/_new_about.html.haml
+++ b/app/views/layouts/_new_about.html.haml
@@ -1,10 +1,6 @@
 .container.mt-80{style: "margin-top: -150px;"}
   .row
-    .col-sm-8
-      %h2.heading
-        Krótki
-        %span.color1 artykuł o
-        nas
+    .col-sm-8.left_about
       %p
         CannaHub to platforma integrującą możliwości administracyjne, produkcyjne i logistyczne w celu dostarczania preparatów medycznych na bazie konopi.Nasze rozwiązania to realna poprawa jakości życia chorych i niepełnosprawnych Pacjentów w Polsce i na terenie krajów Unii Europejskiej, gdzie terapia medyczną marihuaną jest prawem pacjenta.
       %p
@@ -13,13 +9,13 @@
       .news-slider.style-1
         .slider-items
           %div
-            %h4.heading Ranked 8th in Best Hospitals.
+            %h4.heading 
             %hr.hr-2.left/
-            %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
+            %p Podstawę prawną w Polsce określa ustawa z dnia 7 lipca 2017 r. o zmianie ustawy o przeciwdziałaniu narkomanii oraz ustawy o refundacji leków, środków spożywczych specjalnego przeznaczenia żywieniowego oraz wyrobów medycznych
           %div
-            %h4.heading 80% Surgery Success Rate
+            %h4.heading 
             %hr.hr-2.left/
-            %p Behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.
+            %p Od 1 listopada 2017 r. przepisy prawa regulują rejestrację, wytwarzanie i wprowadzanie do obrotu w Polsce preparatów medycznych na bazie konopi oraz stosowanie zarejestrowanych preparatów w lecznictwie.
         .slider-nav
           .left
             %i.fa.fa-angle-left
