--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,6 +38,8 @@
     = render 'layouts/new_about'
     = render 'layouts/terapy'
     = render 'layouts/model'
+    = render 'layouts/collborators'
+    = render 'layouts/soon'
     = render 'layouts/carousel'
     = render 'layouts/footer'
 
