--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -172,3 +172,22 @@ position: absolute;
   transform: translateX(-50%);
   z-index: 2;
 }
+
+.text-menu-item {
+color: #000;
+text-align: center;
+font-weight: 400;
+overflow: hidden;
+position: relative;
+text-transform: uppercase;
+font-size: 13px;
+letter-spacing: 1px;
+background-color: transparent;
+z-index: 1;
+-webkit-transition: 350ms all ease;
+transition: 350ms all ease;
+}
+
+.text-menu-item:hover {
+  color: rgb(153, 40, 40);
+  }
