--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -7,7 +7,7 @@
         .col-md-12.text-center
           .widget.widget-about
             .col-md-4
-              %h5.footer-title
+              %h5.footer-title{style: "text-transform: none;"}
                 Obsługa w języku polskim
               %ul.contact
                 %li
@@ -17,7 +17,7 @@
                   %i.fa.fa-envelope
                   =I18n.t('mail_pl')
             .col-md-4
-              %h5.footer-title
+              %h5.footer-title{style: "text-transform: none;"}
                 Obsługa w języku angielskim
               %ul.contact
                 %li
@@ -27,8 +27,8 @@
                   %i.fa.fa-envelope
                   =I18n.t('mail_en')   
             .col-md-4         
-              %h5.footer-title
-                Canna Hub Sp. z o.o. 
+              %h5.footer-title{style: "text-transform: none;"}
+                Canna Hub Sp. Z o.o. 
               %ul.contact
                 %li
                   %i.fa.fa-map-marker
