--- a/app/views/layouts/_new_about.html.haml
+++ b/app/views/layouts/_new_about.html.haml
@@ -1,17 +1,17 @@
-.container.mt-80{style: "margin-top: -150px;"}
+.container.mt-80{style: "margin-top: -95px"}
   .row
-    .col-sm-8.left_about
+    .col-sm-8.left_about.justify-style
       %p
         CannaHub to platforma integrującą możliwości administracyjne, produkcyjne i logistyczne w celu dostarczania preparatów medycznych na bazie konopi.Nasze rozwiązania to realna poprawa jakości życia chorych i niepełnosprawnych Pacjentów w Polsce i na terenie krajów Unii Europejskiej, gdzie terapia medyczną marihuaną jest prawem pacjenta.
       %p
         Zgodnie z prawem, do obrotu oraz importu do Polski dopuszczone są leki gotowe pochodzenia roślinnego, jak również standaryzowane surowce w postaci roślinnej (suszone kwiatostany) oraz w postaci wyciągów przeznaczone do sporządzania leków recepturowych w aptece na podstawie preskrypcji lekarskiej bądź przeznaczone do dalszego procesu produkcyjnego jako substancje czynne.
     .col-sm-4
       .news-slider.style-1
-        .slider-items
+        .slider-items.justify-style
           %div
-            %h4.heading 
+            %h4.heading
             %hr.hr-2.left/
-            %p Podstawę prawną w Polsce określa ustawa z dnia 7 lipca 2017 r. o zmianie ustawy o przeciwdziałaniu narkomanii oraz ustawy o refundacji leków, środków spożywczych specjalnego przeznaczenia żywieniowego oraz wyrobów medycznych
+            %p Podstawę prawną w Polsce określa ustawa z dnia 7 lipca 2017 r. o zmianie ustawy o przeciwdziałaniu narkomanii oraz ustawy o refundacji leków, środków spożywczych specjalnego przeznaczenia żywieniowego oraz wyrobów medycznych.
           %div
             %h4.heading 
             %hr.hr-2.left/
