--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -40,5 +40,5 @@
         .col-sm-12
           %span
             =I18n.t('footer.copywright') 
-            =link_to "Canna Hub Sp. z o.o. ", controller: "static_pages_controller", action: "home"
+            =link_to "Canna Hub Sp. z o.o. ", static_pages_controller_home_path
             =I18n.t('footer.reserved')
