--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -200,3 +200,57 @@ transition: 350ms all ease;
   .justify-style {
     text-align: justify;
   }
+
+.heading-aj{
+  position: relative;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+
+
+.heading-aj .heading{
+  margin-bottom: 30px;
+}
+
+.heading-aj .sub-heading{
+  display: block;
+  text-align: center;
+  margin: 18px auto 18px auto;
+  color: #585858;
+  max-width: 750px;
+  line-height: 28px;
+  text-transform: none;
+  font-weight: 300;
+  padding: 20px 0px;
+  position: relative;
+}
+
+.heading-aj .sub-heading:before{
+  content: "";
+  position: absolute;
+  top:0px;
+  left: 50%;
+  height: 6px;
+  width: 90%;
+  background-color: #f2f2f2;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.heading-aj .sub-heading:after{
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 50%;
+  height: 6px;
+  width: 90%;
+  background-color: #f2f2f2;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.heading-aj.inverse .heading,
+.heading-aj.inverse .sub-heading{
+  color: #fff;
+}
