--- a/app/views/layouts/_carousel.html.haml
+++ b/app/views/layouts/_carousel.html.haml
@@ -1,6 +1,6 @@
 .container.partner-content
     .col-sm-12
-        .heading-block
+        .heading-block{style:"margin-top:60px"}
             %h2.heading
                 Nasi partnerzy
         %div.slider-partners
