--- a/app/views/layouts/_collborators.html.haml
+++ b/app/views/layouts/_collborators.html.haml
@@ -1,7 +1,7 @@
 .container.mt-80
   .row
     .col-sm-12
-      .heading-block
+      .heading-aj
         %h2.heading
           Jesteśmy otwarci na współpracę
         %p.sub-heading Zapraszamy międzynarodowych partnerów do współpracy w zakresie rozwoju, dostaw produktów, protokołu badawczo - naukowego i technologii
