--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,41 +17,41 @@
             %li
               %span=I18n.t('header.email_us')
               =I18n.t('e-mail')
-  %nav.navbar.navbar-default
-    / Navigation Bar
-    .container
-      .navbar-header
-        %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#main-navigation", "data-toggle" => "collapse", :type => "button"}
-          %span.sr-only=I18n.t('header.menu')
-          %i.fa.fa-bars
-        =link_to image_tag("logo.png", alt: "logo"), {action: 'home', controller: 'static_pages_controller'}, class: 'navbar-brand', style: "margin-top: 7px;"
-        / Replace with your Logo
-      #main-navigation.collapse.navbar-collapse
-        / Main Menu
-        %ul.nav.navbar-nav.navbar-right
-          %li
-            %a.text-menu-item{ :href => "#onas", :title => "O nas" }
-              O nas
-          %li
-            %a.text-menu-item{ :href => "#onas", :title => "O nas" }
-              Model
-          %li
-            %a.text-menu-item{ :href => "#onas", :title => "O nas" }
-              Współpraca
-          %li
-            %a.text-menu-item{ :href => "#onas", :title => "O nas" }
-              Wkrótce
-          %li
-            %a.text-menu-item{ :href => "#onas", :title => "O nas" }
-              Partnerzy    
-            / %ul.sub-menu
-            /   / Sub Menu
-            /   %li
-            /     =link_to I18n.t('header.ch_stow'), "https://www.cannabishouse.eu", target: "_blank"
-            /   %li
-            /     =link_to I18n.t('header.thc'), "https://www.tradehempcenter.pl", target: "_blank"
-            /   %li
-            /     =link_to I18n.t('header.grl'), "https://www.grassrootslobbing.pl", target: "_blank"
-          %li
-            = link_to I18n.t('header.contact'), controller: "static_pages_controller", action: "contact"
+-#   %nav.navbar.navbar-default
+-#     / Navigation Bar
+-#     .container
+-#       .navbar-header
+-#         %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#main-navigation", "data-toggle" => "collapse", :type => "button"}
+-#           %span.sr-only=I18n.t('header.menu')
+-#           %i.fa.fa-bars
+-#         =link_to image_tag("logo.png", alt: "logo"), {action: 'home', controller: 'static_pages_controller'}, class: 'navbar-brand', style: "margin-top: 7px;"
+-#         / Replace with your Logo
+-#       #main-navigation.collapse.navbar-collapse
+-#         / Main Menu
+-#         %ul.nav.navbar-nav.navbar-right
+-#           %li
+-#             %a.text-menu-item{ :href => "#onas", :title => "O nas" }
+-#               O nas
+-#           %li
+-#             %a.text-menu-item{ :href => "#onas", :title => "O nas" }
+-#               Model
+-#           %li
+-#             %a.text-menu-item{ :href => "#onas", :title => "O nas" }
+-#               Współpraca
+-#           %li
+-#             %a.text-menu-item{ :href => "#onas", :title => "O nas" }
+-#               Wkrótce
+-#           %li
+-#             %a.text-menu-item{ :href => "#onas", :title => "O nas" }
+-#               Partnerzy    
+-#             / %ul.sub-menu
+-#             /   / Sub Menu
+-#             /   %li
+-#             /     =link_to I18n.t('header.ch_stow'), "https://www.cannabishouse.eu", target: "_blank"
+-#             /   %li
+-#             /     =link_to I18n.t('header.thc'), "https://www.tradehempcenter.pl", target: "_blank"
+-#             /   %li
+-#             /     =link_to I18n.t('header.grl'), "https://www.grassrootslobbing.pl", target: "_blank"
+-#           %li
+-#             = link_to I18n.t('header.contact'), controller: "static_pages_controller", action: "contact"
  
